[gd_scene load_steps=9 format=3 uid="uid://ox82wty04xs6"]

[ext_resource type="Script" uid="uid://8dtlejd06lov" path="res://scripts/main_window.gd" id="1"]
[ext_resource type="Script" uid="uid://bi0rdwg710fs2" path="res://scripts/viewport_controller.gd" id="2"]
[ext_resource type="Script" uid="uid://o10vhbxcsn2d" path="res://scripts/clip_manager.gd" id="3"]
[ext_resource type="Script" uid="uid://c11v0mc6desyr" path="res://scripts/timeline_editor.gd" id="4"]
[ext_resource type="Script" uid="uid://hixt18yhvnwt" path="res://scripts/components/range_slider.gd" id="5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.12, 0.12, 0.12, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.16, 0.16, 0.16, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.25, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.15, 0.15, 0.15, 1)
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.4, 0.4, 1)

[node name="MainWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer/TopBar/MarginContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.298, 0.62, 1, 1)
theme_override_font_sizes/font_size = 18
text = "AnimSlicer"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TopBar/MarginContainer/HBox"]
layout_mode = 2

[node name="ActionButtons" type="HBoxContainer" parent="VBoxContainer/TopBar/MarginContainer/HBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ImportButton" type="Button" parent="VBoxContainer/TopBar/MarginContainer/HBox/ActionButtons"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
text = "Import GLB"

[node name="SourceAnimOption" type="OptionButton" parent="VBoxContainer/TopBar/MarginContainer/HBox/ActionButtons"]
custom_minimum_size = Vector2(160, 36)
layout_mode = 2
tooltip_text = "Select Source Animation Track"
disabled = true

[node name="UpdateModelButton" type="Button" parent="VBoxContainer/TopBar/MarginContainer/HBox/ActionButtons"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
disabled = true
text = "Update GLB"

[node name="SingleFileCheck" type="CheckBox" parent="VBoxContainer/TopBar/MarginContainer/HBox/ActionButtons"]
layout_mode = 2
tooltip_text = "Merge everything into one file (No JSON/CSS files)"
text = "Single HTML"

[node name="ExportButton" type="Button" parent="VBoxContainer/TopBar/MarginContainer/HBox/ActionButtons"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
disabled = true
text = "Export Web"

[node name="InfoLabel" type="Label" parent="VBoxContainer/TopBar/MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "No model loaded"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 280

[node name="LeftPanel" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderBox" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox/HeaderBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Animation Clips"

[node name="ToolBar" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox/HeaderBox"]
layout_mode = 2

[node name="AddClipButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox/HeaderBox/ToolBar"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
disabled = true
text = "+"

[node name="RemoveClipButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox/HeaderBox/ToolBar"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
disabled = true
text = "-"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="ClipList" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ClipContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox/ClipList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
script = ExtResource("3")

[node name="ViewportPanel" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/HSplitContainer/ViewportPanel"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/HSplitContainer/ViewportPanel/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(860, 417)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/HSplitContainer/ViewportPanel/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 5)
script = ExtResource("2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/HSplitContainer/ViewportPanel/SubViewportContainer/SubViewport"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="VBoxContainer/HSplitContainer/ViewportPanel/SubViewportContainer/SubViewport"]
environment = SubResource("Environment_1")

[node name="ModelHolder" type="Node3D" parent="VBoxContainer/HSplitContainer/ViewportPanel/SubViewportContainer/SubViewport"]

[node name="GridMesh" type="MeshInstance3D" parent="VBoxContainer/HSplitContainer/ViewportPanel/SubViewportContainer/SubViewport"]

[node name="BottomPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/BottomPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
script = ExtResource("4")

[node name="Header" type="HBoxContainer" parent="VBoxContainer/BottomPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Timeline Editor"

[node name="TimeInputs" type="HBoxContainer" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="FPSCheck" type="CheckBox" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/Header/TimeInputs"]
layout_mode = 2
text = "Show Frames (30fps)"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/Header/TimeInputs"]
layout_mode = 2

[node name="StartLabel" type="Label" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/Header/TimeInputs"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Start:"

[node name="StartSpinBox" type="SpinBox" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/Header/TimeInputs"]
layout_mode = 2
step = 0.01
suffix = "s"

[node name="EndLabel" type="Label" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/Header/TimeInputs"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "End:"

[node name="EndSpinBox" type="SpinBox" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/Header/TimeInputs"]
layout_mode = 2
step = 0.01
value = 1.0
suffix = "s"

[node name="ControlBar" type="HBoxContainer" parent="VBoxContainer/BottomPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayButton" type="Button" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/ControlBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
disabled = true
text = "â–¶"

[node name="CurrentTimeLabel" type="Label" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/ControlBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.298, 0.62, 1, 1)
text = "0.00s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RangeSlider" type="Control" parent="VBoxContainer/BottomPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5")

[node name="Background" type="Panel" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/RangeSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TrackFill" type="ColorRect" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/RangeSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.18, 0.5, 0.95, 0.15)

[node name="SelectedRange" type="ColorRect" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/RangeSlider"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.2, 0.6, 1, 0.4)

[node name="StartHandle" type="Panel" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/RangeSlider"]
custom_minimum_size = Vector2(4, 40)
layout_mode = 0
offset_right = 4.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/RangeSlider/StartHandle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.8, 1, 1)

[node name="EndHandle" type="Panel" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/RangeSlider"]
custom_minimum_size = Vector2(4, 40)
layout_mode = 0
offset_left = 90.0
offset_right = 100.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/RangeSlider/EndHandle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.8, 1, 1)

[node name="CurrentTimeLine" type="ColorRect" parent="VBoxContainer/BottomPanel/MarginContainer/VBox/RangeSlider"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 0
offset_right = 2.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(1, 0.3, 0.3, 1)

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(800, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.glb, *.gltf ; GLTF Files")

[connection signal="pressed" from="VBoxContainer/TopBar/MarginContainer/HBox/ActionButtons/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TopBar/MarginContainer/HBox/ActionButtons/UpdateModelButton" to="." method="_on_update_model_pressed"]
[connection signal="pressed" from="VBoxContainer/TopBar/MarginContainer/HBox/ActionButtons/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox/HeaderBox/ToolBar/AddClipButton" to="." method="_on_add_clip_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBox/HeaderBox/ToolBar/RemoveClipButton" to="." method="_on_remove_clip_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomPanel/MarginContainer/VBox/ControlBar/PlayButton" to="VBoxContainer/BottomPanel/MarginContainer/VBox" method="_on_play_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_selected"]
